oversim/simulations/firewall.rules
# Generated by iptables-save v1.6.1 on Mon Oct 26 15:48:10 2020
*mangle
:PREROUTING ACCEPT [789151951:346231295267]
:INPUT ACCEPT [765353481:318347589724]
:FORWARD ACCEPT [19237911:27492017193]
:OUTPUT ACCEPT [816403319:175484349564]
:POSTROUTING ACCEPT [835641230:202976366757]
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Mon Oct 26 15:48:10 2020
# Generated by iptables-save v1.6.1 on Mon Oct 26 15:48:10 2020
*nat
:PREROUTING ACCEPT [4427047:374222700]
:INPUT ACCEPT [10973:790465]
:OUTPUT ACCEPT [1437853:121113152]
:POSTROUTING ACCEPT [1437970:121119762]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 192.168.122.0/24 -d 224.0.0.0/24 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 -d 255.255.255.255/32 -j RETURN
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.122.0/24 ! -d 192.168.122.0/24 -j MASQUERADE
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.19.0.0/16 ! -o br-aa452b37605d -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-a0fd7e7c39ea -j MASQUERADE
-A POSTROUTING -s 172.17.0.2/32 -d 172.17.0.2/32 -p tcp -m tcp --dport 9090 -j MASQUERADE
-A POSTROUTING -s 172.17.0.3/32 -d 172.17.0.3/32 -p tcp -m tcp --dport 3000 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-aa452b37605d -j RETURN
-A DOCKER -i br-a0fd7e7c39ea -j RETURN
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 9090 -j DNAT --to-destination 172.17.0.2:9090
-A DOCKER ! -i docker0 -p tcp -m tcp --dport 3000 -j DNAT --to-destination 172.17.0.3:3000
COMMIT
# Completed on Mon Oct 26 15:48:10 2020
# Generated by iptables-save v1.6.1 on Mon Oct 26 15:48:10 2020
*filter
:INPUT ACCEPT [54740333:7867812011]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [83777199:60504183748]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A INPUT -i virbr0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i virbr0 -p udp -m udp --dport 67 -j ACCEPT
-A INPUT -i virbr0 -p tcp -m tcp --dport 67 -j ACCEPT
-A FORWARD -d 192.168.122.0/24 -o virbr0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.122.0/24 -i virbr0 -j ACCEPT
-A FORWARD -i virbr0 -o virbr0 -j ACCEPT
-A FORWARD -o virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -i virbr0 -j REJECT --reject-with icmp-port-unreachable
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-aa452b37605d -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-aa452b37605d -j DOCKER
-A FORWARD -i br-aa452b37605d ! -o br-aa452b37605d -j ACCEPT
-A FORWARD -i br-aa452b37605d -o br-aa452b37605d -j ACCEPT
-A FORWARD -o br-a0fd7e7c39ea -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-a0fd7e7c39ea -j DOCKER
-A FORWARD -i br-a0fd7e7c39ea ! -o br-a0fd7e7c39ea -j ACCEPT
-A FORWARD -i br-a0fd7e7c39ea -o br-a0fd7e7c39ea -j ACCEPT
-A OUTPUT -o virbr0 -p udp -m udp --dport 68 -j ACCEPT
-A DOCKER -d 172.17.0.2/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 9090 -j ACCEPT
-A DOCKER -d 172.17.0.3/32 ! -i docker0 -o docker0 -p tcp -m tcp --dport 3000 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-aa452b37605d ! -o br-aa452b37605d -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-a0fd7e7c39ea ! -o br-a0fd7e7c39ea -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-aa452b37605d -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-a0fd7e7c39ea -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Mon Oct 26 15:48:10 2020
